tuned params of logbarrier and augmentedlagrangian, unittest for constraiend optimization